k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: gowebapp-service
spec:
  selector:
    app: gowebapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
