k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "example.com"
        http:
          paths:
            - path: /courses
                pathType: Prefix
                  backend:
                    service:
                      name: gowebapp-service
                        port:
                          number: 80
